# Oxidize

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  shell.nix  spec.yaml
configuration/: base.yaml
migrations/: 20241228144201_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
