[package]
name = "oxidize"
version = "0.1.0"
authors = ["dundorma <dundorma@users.noreply.github.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "oxidize"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4"
env_logger = "0.11.6"
log = "0.4.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
