[package]
name = "oxidize"
version = "0.1.0"
authors = ["dundorma <dundorma@users.noreply.github.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "oxidize"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4"
log = "0.4.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "4"
config = "0.15.4"
uuid = { version = "1", features = ["v4"] }
unicode-segmentation = "1"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
